visual content layout shift bug fix on header search

--- a/components/store/storeLayout/styles/searchBar.module.css
+++ b/components/store/storeLayout/styles/searchBar.module.css
@@ -11,7 +11,7 @@
   padding: 30px 0;
 }
 
-.SearchFormWrapperMobile {
+.searchFormContainer {
   display: none;
 }
 
@@ -226,6 +226,15 @@
     position: unset;
     display: none;
   }
+
+  .searchFormContainer {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
   .SearchFormWrapperMobile {
     width: 100%;
     display: flex;
